--- a/meesho/src/Components/CSS Files/Home.css
+++ b/meesho/src/Components/CSS Files/Home.css
@@ -216,15 +216,14 @@
   }
   
   #napic{
-      width: 170px;
-      height:95%;
+      width: 150px;
+      height:55%;
       /* border: 1px solid red; */
   }
   
   #napic>img{
       width: 100%;
       height: 100%;
-      border-radius: 15px;
   }
   
   #nasearch{
@@ -305,72 +304,287 @@
       /* margin-top: 70px; */
   }
   
-  #holowest{
-      width: 70%;
-      height: 345px;
-      /* border: 1px solid black; */
-      margin: auto;
-      display: flex;
-      margin-top: 50px;
-  }
+/* ----------------------------****------------------------------------ */
   
-  #holeft{
-  width: 55%;
+  #poster {
+    width: 100%;
+}
+
+#poster>div:nth-child(1) {
+    width: 73%;
+    height: 350px;
+    /* border: 1px solid teal; */
+    margin: auto;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#poster>div:nth-child(1)>div:nth-child(1) {
+    width: 52%;
+    /* border: 1px solid teal; */
+    /* height: 300px; */
+    background-color: rgb(248, 248, 255);
+
+}
+
+#poster>div:nth-child(1)>div:nth-child(1)>div:nth-child(1) {
+    color: rgb(53, 53, 67);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 52px;
+    font-family: "Mier bold";
+    margin-left: 20px;
+    padding: 25px;
+}
+
+#doptions {
+    width: 80%;
+    /* border: 1px solid red; */
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    /* margin-top: 20px; */
+    border-radius: 5px;
+    background-color: white;
+
+}
+
+#doptions>div {
+    /* width: 30%; */
+    /* border: 1px solid red; */
+
+    display: flex;
+    border-right: 1px solid rgb(58, 57, 57);
+    background-color: rgb(248, 248, 255);
+    /* padding-left: 10px; */
+    background-color: white;
+}
+
+#doptions>div>img {
+    width: 32px;
+    /* border: 1px solid black; */
+    border-radius: 50%;
+    height: 32px;
+    margin: 5px;
+}
+
+#doptions>div>span {
+    font-size: 16px;
+    color: rgb(53, 53, 67);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    font-family: "Mier demi";
+    margin: 0px;
+    padding: 0px 0px 0px 10px;
+    margin-right: 25px;
+
+}
+
+#poster>div:nth-child(1)>div:nth-child(1)>button:nth-child(3) {
+    /* width: 40%; */
+    /* margin: 55px; */
+    border: none;
+    background: rgb(159, 32, 137);
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 2px;
+    border-radius: 5px;
+    display: flex;
+    margin-top: 25px;
+    margin-left: 55px;
+    margin-bottom: 25px;
+    /* height: 30px; */
+    color: white;
+    
+}
+
+#poster>div:nth-child(1)>div:nth-child(1)>button:nth-child(3)>img {
+    margin-top: 8px;
+    margin-left: 25px;
+
+}
+
+#poster>div:nth-child(1)>div:nth-child(1)>button:nth-child(3)>p {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 15px;
+    margin-left: 25px;
+}
+
+
+#poster>div:nth-child(1)>div:nth-child(2) {
+    width: 47%;
+    /* border: 1px solid teal; */
+    /* height: 300px;    */
+}
+
+#poster>div:nth-child(1)>div:nth-child(2)>img {
+    width: 100%;
+    height: 100%;
+}
+
+/* ------------------------------ */
+
+#poster>h2:nth-child(2) {
+    text-align: center;
+    /* border-bottom: 1px solid red; */
+    padding: 80px;
+    font-size: 36px;
+    color: #353543;
+}
+
+#poster>div:nth-child(3) {
+    width: 73%;
+    /* height: 400px; */
+    /* border: 1px solid teal; */
+    margin: auto;
+    display: flex;
+    /* gap: 15px; */
+    background-image: url(https://images.meesho.com/images/marketing/1695992101090_1200.webp);
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+    border-radius: 4px;
+    background-size: 100% 100%;
+
+}
+
+#poster>div:nth-child(3)>div {
+    /* height: 300px; */
+    /* border: 1px solid red; */
+    margin-top: 80px;
+    margin-bottom: 50px;
+}
+
+#poster>div:nth-child(3)>div>img{
+  width: 102%;
+  border-radius: 30px;
+}
+
+
+
+
+#poster>div:nth-child(4) {
+  width: 73%;
+  /* border: 1px solid teal; */
+  margin: auto;
+  /* height: 400px; */
+  margin-top: 50px;
+  background-image: url(https://images.meesho.com/images/marketing/1695992792171_1200.webp);
+  background-size: 100% 100%;
+  display: flex;
+  padding-bottom: 40px;
+
+}
+
+#poster>div:nth-child(4)>div:nth-child(1) {
+  margin-top: 250px;
+  width: 339px;
+
+
+}
+
+#poster>div:nth-child(4)>div:nth-child(1)>button {
+  background-color: transparent;
+  border: none;
+  margin-left: 100px;
+}
+
+#poster>div:nth-child(4)>div:nth-child(2) {
+  /* padding: 10px; */
+  margin-top: 50px;
+  display: flex;
+  margin-left: 70px;
+}
+
+#poster>div:nth-child(4)>div:nth-child(2)>div {
+
   /* border: 1px solid red; */
-  }
-  
-  #hotext{
-      font-size: 48px;
-      font-weight: 600;
-      color: #353543;
-      margin-top: 50px;
-  }
-  
-  #hocon{
-      display: flex;
-      color: #353543;
-      font-size: 16px;
-      font-weight: 500;
-      padding-left: 20px;
-      margin-top: 30px;
-  }
-  
-  #hocon>div{
-      border-right: 1px solid rgb(42, 40, 40) ;
-      padding-right:70px ;
-  }
-  #hocon>img{
-      padding-right: 10px;
-  }
-  
-  #hoplay{
-      display: flex;
-      width: 300px;
-      height: 45px;
-      border: 1px solid #9f2089;
-      background-color: #9f2089;
-      border-radius: 5px;
-      align-items: center;
-      color: white;
-      margin-top: 30px;
-      margin-left: 20px;
-  }
-  
-  #hoplay>img{
-      width: 25px;
-      height: 30px; 
-      margin-left: 20px;
-  }
-  
-  #hoplay>p{
-      margin-left: 20px;
-  }
-  
-  #hobody>div:nth-child(2){
-      font-size: 36px;
-      font-weight: 700;
-      margin-left: 470px;
-      color: #353543;
-      margin-top: 70px;
-  }
-  
+  width: 28%;
+  margin-left: 20px;
+}
+
+#poster>div:nth-child(4)>div:nth-child(2)>div>img:nth-child(2) {
+  margin-left: 20px;
+  width: 170px;
+}
+
+
+#poster>div:nth-child(5) {
+    width: 73%;
+    /* border: 1px solid teal; */
+    margin: auto;
+    /* height: 400px; */
+    margin-top: 50px;
+    background-image: url(https://images.meesho.com/images/marketing/1695988278665_1200.webp);
+    background-size: 100% 100%;
+    display: flex;
+    padding-bottom: 40px;
+
+}
+
+#poster>div:nth-child(5)>div:nth-child(1) {
+    margin-top: 250px;
+    width: 339px;
+
+
+}
+
+#poster>div:nth-child(5)>div:nth-child(1)>button {
+    background-color: transparent;
+    border: none;
+    margin-left: 100px;
+}
+
+#poster>div:nth-child(5)>div:nth-child(2) {
+    /* padding: 10px; */
+    margin-top: 50px;
+    display: flex;
+    margin-left: 70px;
+}
+
+#poster>div:nth-child(5)>div:nth-child(2)>div {
+
+    /* border: 1px solid red; */
+    width: 28%;
+    margin-left: 20px;
+}
+
+#poster>div:nth-child(5)>div:nth-child(2)>div>img:nth-child(2) {
+    margin-left: 20px;
+    width: 170px;
+}
+
+#poster>h2:nth-child(6) {
+    /* text-align: center; */
+    /* border-bottom: 1px solid red; */
+    /* padding: 80px; */
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+/* //all//product */
+
+#poster>div:nth-child(7) {
+    width: 100%;
+    /* border: 1px solid teal; */
+    /* height: 400px; */
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
+#poster>div:nth-child(8) {
+    /* border:2px solid green; */
+    /* height: 300px; */
+    width: 100%;
+    background-color: #f8f8ff;
+    margin-top: 50px;
+}
