--- a/meesho/src/Components/CSS Files/Home.css
+++ b/meesho/src/Components/CSS Files/Home.css
@@ -23,6 +23,7 @@
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 0.75rem 0 #838282;
+    z-index: 9999;
   }
 
   #popup>div:nth-child(1)>p>b{
@@ -136,6 +137,7 @@
   height: 900px;
   background-color: rgba(33, 33, 33, 0.7);
   left: 0%;
+  z-index: 999;
 }
 
 #propop>div{
@@ -194,6 +196,9 @@
     /* border: 2px solid blue; */
     height: 70px;
     border-bottom: 1px solid rgb(161, 160, 160);
+    /* position: fixed;
+    top: 0%; */
+    background-color: white;
   }
   
   #nalo{
@@ -216,14 +221,16 @@
   }
   
   #napic{
-      width: 150px;
-      height:55%;
+      width: 160px;
+      height:45%;
       /* border: 1px solid red; */
+      
   }
   
   #napic>img{
       width: 100%;
       height: 100%;
+      mix-blend-mode: multiply;
   }
   
   #nasearch{
@@ -302,6 +309,9 @@
       align-items: center;
       color: #353543 ;
       /* margin-top: 70px; */
+      /* position: fixed;
+    top: 70px; */
+    background-color: white;
   }
   
 /* ----------------------------****------------------------------------ */
@@ -434,7 +444,7 @@
 #poster>h2:nth-child(2) {
     text-align: center;
     /* border-bottom: 1px solid red; */
-    padding: 80px;
+    padding: 55px;
     font-size: 36px;
     color: #353543;
 }
